Improved preview mode slide render css.

--- a/client/src/app/dashboard/dashboard.component.css
+++ b/client/src/app/dashboard/dashboard.component.css
@@ -1,6 +1,6 @@
 #dashboard-container {
     display: grid;
-    grid-template-columns: 250px auto;
+    grid-template-columns: auto 1fr;
     grid-template-rows: 100vh;
     grid-template-areas: "nav content";
     max-width: 100vw;
@@ -9,9 +9,27 @@
 
 /*  Dashboard left navigation bar */
 #dashboard-nav {
-    width: 100%;
+    width: 225px;
     height: 100%;
     grid-area: nav;
+}
+
+#mobile-nav-toggle-btn {
+    display: none;
+    font-size: 20px;
+    z-index: 101;
+    position: fixed;
+    top: 15px;
+    left: 15px;
+}
+
+#dashboard-nav-mobile {
+    width: 60vw;
+    height: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 100;
 }
 
 .dashboard-nav-link {
@@ -47,6 +65,10 @@
     margin: 25px auto;
 }
 
+#mobile-message {
+    display: none;
+}
+
 #no-projects {
     width: 100%;
     text-align: center;
@@ -64,6 +86,7 @@
 
 #projects-container {
     width: 90%;
+    height: auto;
     margin: 0 auto;
     display: flex;
     flex-direction: row;
@@ -126,6 +149,8 @@
     padding: 25px;
     border-radius: 10px;
     background: #FFF;
+    max-width: 95vw;
+    box-sizing: border-box;
 }
 
 .popup-form p {
@@ -149,7 +174,7 @@
 
 .popup-form button {
     padding: 10px 25px;
-    margin: 0 5px;
+    margin: 5px;
     font-size: 1rem;
     width: 200px;
 }
@@ -193,4 +218,32 @@ hr {
 #settings-container button {
     width: 175px;
     padding: 10px 0;
+}
+
+@media only screen and (max-width: 800px) {
+
+    #mobile-message{
+        max-width: 90vw;
+        font-size: 0.9rem;
+    }
+
+    #create-project-btn {
+        display: none;
+    }
+
+    #projects-container {
+        justify-content: center;
+    }
+
+    #dashboard-nav {
+        display: none;
+    }
+
+    #mobile-nav-toggle-btn {
+        display: flex;
+    }
+
+    #dashboard-nav-mobile {
+        display: flex;
+    }
 }
