--- a/client/src/app/toolbar/toolbar.component.html
+++ b/client/src/app/toolbar/toolbar.component.html
@@ -53,7 +53,7 @@
       <p>Export to PDF</p>
     </a>
 
-    <a (click)="this.data.saveProject()" class="flex-col-evenly toolbar-btn-group">
+    <a (click)="this.toolbar.save()" class="flex-col-evenly toolbar-btn-group">
       <fa name="save"></fa>
       <p>Save</p>
     </a>
