--- a/client/src/app/home/home.component.css
+++ b/client/src/app/home/home.component.css
@@ -7,11 +7,9 @@
 
 #home-content-container {
     width: 80%;
-    max-width: 1200px;
-    height: auto;
+    padding: 75px 0;
+    box-sizing: border-box;
     display: grid;
-    padding: 150px 0;
-    margin-top: 100px;
     grid-template-columns: 70% 30%;
     grid-template-areas: "left right";
 }
