--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps');
+
 /* Document Defaults */
 body, html{
     margin: 0;
