--- a/client/src/app/home/home.component.css
+++ b/client/src/app/home/home.component.css
@@ -1,26 +1,16 @@
-/* * {
-    border: 1px yellow solid;
-    box-sizing: border-box;
-} */
 
-@import url('https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps');
 
-#home-content-container {
-    width: 80%;
+.component-container {
     padding: 75px 0;
+    overflow: auto;
     box-sizing: border-box;
-    display: grid;
-    grid-template-columns: 70% 30%;
-    grid-template-areas: "left right";
 }
 
-#home-left-content {
-    grid-area: left;
-}
-
-#home-left-content > * {
-    max-width: 90%;
-    margin: 15px auto;
+.app-theme {
+    border: 0;
+    background: #FFF;
+    color: rgb(37, 44, 38);
+    border-radius: 10px;
 }
 
 #app-brand {
@@ -28,15 +18,26 @@
     font-size: 4rem;
 }
 
-#splash {
-    box-shadow: 0px 0px 10px rgba(59, 59, 59, 0.4);
-    border: 1px rgba(54, 54, 54, 0.5) solid;
+#app-desc {
+    max-width: 90vw;
+    margin: 25px auto;
+}
+
+#desc-container {
+    align-self: flex-start;
+}
+
+#decription-list {
+    width: 500px;
+    max-width: 85vw;
 }
 
 #description-list li {
     text-decoration: none;
     list-style-type: none;
     line-height: 30px;
+    display: grid; 
+    grid-template-columns: 35px 1fr;
 }
 
 #description-list li fa {
@@ -44,13 +45,8 @@
     color: rgb(0, 155, 0);
 }
 
-#home-right-content > * {
-    max-width: 90%;
-}
-
-#home-right-content {
-    grid-area: right;
-    padding-top: 35px;
+#description-list li p {
+    margin: auto 15px;
 }
 
 .cta-btn {
@@ -61,6 +57,7 @@
     border: 0;
     border-radius: 5px;
     color: #FFF;
+    margin: 25px auto;
 }
 
 .cta-btn:hover {
@@ -68,9 +65,11 @@
 }
 
 #forms-container {
-    width: 100%;
+    width: 300px;
+    margin: 0 25px;
     overflow: hidden;
     box-shadow: 2px 2px 5px black;
+    align-self: flex-start;
 }
 
 #forms-container-nav {
@@ -101,10 +100,53 @@
     transition: background 0.25s;
 }
 
-.app-theme {
-    border: 0;
-    background: #FFF;
-    color: rgb(37, 44, 38);
-    border-radius: 10px;
+#splash {
+    box-shadow: 0px 0px 10px rgba(59, 59, 59, 0.4);
+    border: 1px rgba(54, 54, 54, 0.5) solid;
+    width: 600px;
+    height: auto;
+    max-width: 90vw;
+    margin: 20px auto;
+    position: relative;
 }
 
+#mobile-links-container {
+    display: none;
+}
+
+#mobile-links-container a {
+    color: rgb(202, 202, 202);
+    text-decoration: none;
+    margin: 0 15px;
+    font-size: 1rem;
+}
+
+@media only screen and (max-width: 975px){
+    #forms-container {
+        display: none;
+    }
+
+    #mobile-links-container {
+        display: flex;
+    }
+}
+
+@media only screen and (max-width: 800px){
+    .cta-btn {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 450px){
+    #app-brand {
+        font-size: 14.25vw;
+    }
+
+    p {
+        font-size: 0.9rem;
+    }
+
+    #forms-container {
+        display: none;
+    }
+}
