--- a/client/src/app/login/login.component.css
+++ b/client/src/app/login/login.component.css
@@ -1,3 +1,14 @@
+#app-brand {
+    font-family: 'Oleo Script Swash Caps', cursive;
+    font-size: 4rem;
+    margin: 50px auto 25px auto;
+}
+
+#form{
+    width: 100%;
+    height: 100%;
+}
+
 form > * {
     width: 85%;
 }
@@ -39,6 +50,12 @@ button:hover {
     color: red;
     text-align: center;
     margin-top: 15px;
+}
+
+@media only screen and (max-width: 450px){
+    #app-brand {
+        font-size: 14.25vw;
+    }
 }
 
 
