Implemented firebase image storage.  Basic add/delete functionalities work with gallery images and image objects.

--- a/client/src/app/slide-editor/slide-editor.component.html
+++ b/client/src/app/slide-editor/slide-editor.component.html
@@ -12,7 +12,7 @@
         [position]="slideObject.getTranslation()" [rzAspectRatio]="slideObject.constructor.name==='ImageObject'? true: false">
 
         <p *ngIf="slideObject.constructor.name==='TextObject'" [ngStyle]="slideObject.style.getCss()">{{slideObject.textValue}}</p>
-        <img *ngIf="slideObject.constructor.name==='ImageObject'" [ngStyle]="slideObject.style.getCss()" [src]="slideObject.imagePath"
+        <img *ngIf="slideObject.constructor.name==='ImageObject'" [src]="slideObject.imagePath"
           crossOrigin="anonymous">
 
       </div>
