--- a/client/src/app/preview/preview.component.html
+++ b/client/src/app/preview/preview.component.html
@@ -2,7 +2,7 @@
   <div  id="preview-slide-render" [ngStyle]="getPreviewSlideRenderCss()">
     <div class="slide-object" *ngFor="let slideObject of slides[previewSlideIndex].slideObjects" [ngStyle]="slideObject.getCss()" ngDraggable [position]="slideObject.getTranslation()">
       <p *ngIf="slideObject.constructor.name==='TextObject'" [ngStyle]="slideObject.style.getCss()">{{slideObject.textValue}}</p>
-      <img *ngIf="slideObject.constructor.name==='ImageObject'" [ngStyle]="slideObject.style.getCss()" [src]="slideObject.imagePath"
+      <img *ngIf="slideObject.constructor.name==='ImageObject'" [src]="slideObject.imagePath"
         crossOrigin="anonymous">
       </div>
   </div>
