Implemented CamanJS for image filters.  CamanJS now creates a dataURL from scaled down selectedImage for image preview.  Changed naming convention in client when saving images to firebase so that each user gets their own folder in firebase storage.

--- a/client/src/app/image-sandbox/image-sandbox.component.html
+++ b/client/src/app/image-sandbox/image-sandbox.component.html
@@ -1,7 +1,8 @@
 <div #container class="sandbox-container" id="image-sandbox">
   <div class="preview-area flex-col-center">
     <div id="image-preview-container" *ngIf="selectedImage" [ngStyle]="getPreviewRenderCss()">
-      <img id="image-preview" [src]="selectedImage.url" [ngStyle]="selectedImageStyle.getCss()">
+      <!-- <img id="image-preview" [src]="selectedImagePreview"> -->
+      <img id="image-preview" [src]="selectedImagePreview" [ngStyle]="selectedImageStyle.getCss()">
     </div>
 
     <div class="flex-row-center grayAccent02" id="preview-toolbar">
