Fixed deleting of images from firebase storage when projects and accounts are deleted.

--- a/client/src/app/image-sandbox/image-sandbox.component.html
+++ b/client/src/app/image-sandbox/image-sandbox.component.html
@@ -1,7 +1,9 @@
 <div #container class="sandbox-container" id="image-sandbox">
   <div class="preview-area flex-col-center">
+
+    <h3 *ngIf="!selectedImage">Preview unavailable.  Select an image from your gallery.</h3>
+
     <div id="image-preview-container" *ngIf="selectedImage" [ngStyle]="getPreviewRenderCss()">
-      <!-- <img id="image-preview" [src]="selectedImagePreview"> -->
       <img id="image-preview" [src]="selectedImagePreview" [ngStyle]="selectedImageStyle.getCss()">
     </div>
 
@@ -60,7 +62,7 @@
       <h5 class="gallery-message">Image search powered by: <a href="https://pixabay.com/" target="__blank">Pixabay</a></h5>
 
       <div *ngFor="let image of this.sandbox.imageSearchResults" class="gallery-img-container">
-        <img src="{{image.previewURL}}" class="gallery-img">
+        <img src="{{image.webformatURL}}" class="gallery-img">
         <fa name="plus" class="delete-icon flex-row-evenly" (click)="this.sandbox.pixabayToGallery(image.largeImageURL)"></fa>
       </div>
 
