Cleaned up code.  Renamed services.

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -29,7 +29,7 @@
         </li>
       </ul>
 
-      <button routerLink="main" class="cta-btn">Use as guest</button>
+      <button (click)="this.data.useAsGuest()" class="cta-btn">Use as guest</button>
 
       <img id="splash" src="../../assets/splash.jpg">
 
