--- a/client/src/app/preview/preview.component.css
+++ b/client/src/app/preview/preview.component.css
@@ -26,3 +26,55 @@
     overflow: hidden;
 }
 
+#prev-slide-btn,
+#next-slide-btn,
+#close-btn {
+    display: none;
+}
+
+@media only screen and (max-width: 800px) {
+
+#prev-slide-btn,
+#next-slide-btn,
+#close-btn {
+    display: flex;
+    width: 50px;
+    height: 50px;
+    overflow: hidden;
+    justify-content: center;
+    align-items: center;
+}
+
+.mobile-nav-btn {
+    font-size: 40px;
+    color: rgba(255, 255, 255, 0.2);
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+}
+
+#prev-slide-btn {
+    position: fixed;
+    z-index: 202;
+    left: 0;
+    top: 50%;
+    margin-top: -25px;
+}
+
+#next-slide-btn {
+    position: fixed;
+    z-index: 202;
+    right: 0;
+    top: 50%;
+    margin-top: -25px;
+}
+
+#close-btn {
+    position: fixed;
+    z-index: 202;
+    top: 0;
+    right: 0;
+}
+
+}
+
+
+
